k8s/deploy/rook-storage/cluster.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rook-ceph-mgr-dashboard
  namespace: rook-ceph
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: cilium
  tls:
   - hosts:
     - ceph.eevans.me
     secretName: ceph-dashboard-tls
  rules:
  - host: ceph.eevans.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rook-ceph-mgr-dashboard
            port:
              name: http-dashboard
