k8s/deploy/rook-storage/objectstore.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: object-gateway
  namespace: rook-ceph
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: cilium
  rules:
    - host: s3.eevans.me
      http:
        paths:
          - backend:
              service:
                name: rook-ceph-rgw-object-store
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - s3.eevans.me
      secretName: object-gateway-ingress-tls
